# gh-copy

./: .gh-copyignore  ACTIONS.md  ADVANCED-USAGE.md  AGENTS.md  API-ENDPOINT-PACK-REMOTE-REPO.md  API-ENDPOINT-PACK-REPO.md  API-ENDPOINTS.md  API-REFERENCE.md  ASSETS.md  CI-CD.md  CLI-COMMAND-CLONE-LESS.md  CLI-COMMAND-INIT.md  CLI-COMMAND-PACK.md  CLI-COMMANDS.md  CLI-REFERENCE.md  EVALS.md  EXAMPLES.md  FEATURE-BINARY-FILTERING.md  FEATURE-GLOB-FILTERING.md  FEATURE-JINJA2-TEMPLATING.md  FEATURE-LOCAL-PACKING.md  FEATURE-MINIFICATION.md  FEATURE-OUTPUT-STYLES.md  FEATURE-REMOTE-PACKING.md  FEATURE-SECRET-MASKING.md  FEATURE-SMART-IGNORING.md  FEATURE-TOKEN-COUNTING.md  FEATURES.md  GUIDES.md  INDEX.md  LICENSE  LINTING.md  MCP-TOOLS.md  OVERVIEW.md  PROMPTS.md  README.md  REFERENCES.md  RESOURCES.md  SCRIPTS.md  TEMPLATES.md  (+15 more)
.agents/mcp/: gh-copy-mcp-inventory.md  mcp-tools.json
.firecrawl/docs.orgo.ai/api-reference/authentication/: index.md
.firecrawl/docs.orgo.ai/api-reference/introduction/: index.md
.firecrawl/docs.orgo.ai/guides/agent-s2/: index.md
.firecrawl/docs.orgo.ai/guides/claude-computer-use/: index.md
.firecrawl/docs.orgo.ai/introduction/: index.md
.firecrawl/docs.orgo.ai/quickstart/: index.md
gh-copy-skill/: EXAMPLES.md  REFERENCE.md  SKILL.md
gh-copy-skill/scripts/: forge-memory-prototype.html  pull-mcp.sh
src/gh_copy/: __init__.py  cli.py  packer.py
src/gh_copy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_docs.py  test_packer.py
(+65 files in other folders)
